examples/test/testpolicy18423.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy18423
  namespace: namespace345
spec:
  podSelector:
    matchLabels:
      key25: value46
      key26: value36
      key12: value45
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key8: value15
      podSelector:
        matchLabels:
          key35: value34
          key39: value30
          key27: value27
